Description of the changes

--- a/src/index.html
+++ b/src/index.html
@@ -421,7 +421,7 @@ should try again next time soon ...
                 Explore Us
               </h5>
               <menu class="w-[121px] h-[26.4px] font-poppins text-[16px] font-light leading-[24px] text-left text-[#B0B0B0]">
-                 <a href="#" class="block">About</a>
+                 <a href="./about.html" class="block">About</a>
                  <a href="#" class="block mt-1">Privacy Policy</a>
                  <a href="#" class="block mt-1">Terms & Conditions</a>
               </menu>
