updated version and new html file created

--- a/src/about.html
+++ b/src/about.html
@@ -14,7 +14,7 @@
       
             <!-- Nav-right -->
             <menu class="flex space-x-4">
-              <a href="#" class="relative"><li>Home</li></a>
+              <a href="./index.html" class="relative"><li>Home</li></a>
               <a href="#" class="relative"><li>Browse by</li></a>
               <a href="#" class="relative"><li>Stories</li></a>
               <a href="#" class="relative"><li>Agents</li></a>
@@ -270,8 +270,8 @@
                   </h5>
                   <menu class="w-[121px] h-[26.4px] font-poppins text-[16px] font-light leading-[24px] text-left text-[#B0B0B0]">
                      <a href="#" class="block">New Account</a>
-                     <a href="#" class="block mt-1">Book a Room</a>
-                     <a href="#" class="block mt-1">Payments</a>
+                     <a href="./booking.html" class="block mt-1">Book a Room</a>
+                     <a href="./payment.html" class="block mt-1">Payments</a>
                   </menu>
                 </div>
     
