--- a/src/index.html
+++ b/src/index.html
@@ -411,8 +411,8 @@ should try again next time soon ...
               </h5>
               <menu class="w-[121px] h-[26.4px] font-poppins text-[16px] font-light leading-[24px] text-left text-[#B0B0B0]">
                  <a href="#" class="block">New Account</a>
-                 <a href="#" class="block mt-1">Book a Room</a>
-                 <a href="#" class="block mt-1">Payments</a>
+                 <a href="./booking.html" class="block mt-1">Book a Room</a>
+                 <a href="./payment.html" class="block mt-1">Payments</a>
               </menu>
             </div>
 
